--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <div class="container">
-        <h1  id="main-title">AI辅助写作工具
+        <h1 id="main-title">AI辅助写作工具
             <p>AI-Assisted Writing Tool</p>
         </h1>
         
@@ -97,7 +97,7 @@
                 feedbackOutput.textContent = '';
 
                 try {
-                    const response = await fetch(`${window.location.origin}/api/get-feedback`, {
+                    const response = await fetch('/.netlify/functions/get-feedback', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
